toggle button is created

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 	<link href="style.css" type="text/css", rel="stylesheet">
 </head>
 <body>
-	<input type="checkbox" id=togglebtn>
-	<h2 id="headid"> Click on the Toggle Button</h2>
+	<div id="outer">
+		<div id="inner"></div>
+	</div>
+	<!-- <input type="checkbox" id="togglebtn"> -->
+	<h2 id="heading"> Click on the Toggle Button</h2>
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
