--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Toggle Mode</title>
-	<link href="style.css" type="text/css", rel="stylesheet">
-</head>
-<body>
-		<div id="outer">
-			<div id="inner"></div>
-		</div>
+  <head>
+    <title>Toggle Mode</title>
+    <link href="style.css" type="text/css" , rel="stylesheet" />
+  </head>
+  <body>
+    <div id="outer">
+      <div id="inner"></div>
+    </div>
 
-		<h1 id="heading"> Click on the Toggle Button</h1>
-	<script type="text/javascript" src="script.js"></script>
-</body>
+    <h1 id="heading">Click on the Toggle Button</h1>
+    <script src="../jquery/jquery-3.6.0.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+  </body>
 </html>
