--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Toggle Mode</title>
-    <link href="style.css" type="text/css" , rel="stylesheet" />
+    <link href="css/style.css" type="text/css" , rel="stylesheet" />
   </head>
   <body>
     <div id="outer">
@@ -10,7 +10,7 @@
     </div>
 
     <h1 id="heading">Click on the Toggle Button</h1>
-    <script src="../jquery/jquery-3.6.0.js"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <script src="jquery-3.6.0.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
